--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,8 @@
 
 .home {
 	.intro {
+		padding-top: 130px;
+
 		img {
 			max-width: 100%;
 		}
