--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,6 +2,8 @@
 	width: 100%;
 	padding: 25px 0 15px;
 	background-color: @nav-bg;
+	position: fixed;
+	opacity: 0.95;
 
 	.nav-container {
 		.m-flex(@w: wrap);
